turtleart.flower.Flower.scala.error
Compilation error:
Flower:4: error: not found: value doite
    doite(45)
    ^